--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^8.5",
-        "mockery/mockery": "^1"
+        "mockery/mockery": "^1",
+        "symfony/var-dumper": "^5.0"
     }
 }
