--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
     "require": {
         "php": ">=7.0",
         "guzzlehttp/guzzle": "~6.0",
-        "illuminate/support": "^5|^6|^7"
+        "illuminate/support": "^5|^6|^7|^8"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.5",
