--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,7 @@
     },
     "require": {
         "php": ">=7.0",
-        "guzzlehttp/guzzle": "~6.0",
+        "guzzlehttp/guzzle": ">=7.0",
         "illuminate/support": "^5|^6|^7|^8"
     },
     "require-dev": {
